@@ -1,4 +1,5 @@
 xine-lib (1-beta13)
+  * improved seeking accuracy of ogg_demuxer 
   * xine broadcaster (send stream to multiple xine clients simultaneously)
     start master with 'xine --broadcast-port xxxx'
     start slaves with 'xine slave://master_address:xxxx'
